cycles crash and say : CUDA error: Illegal address in mem_alloc_result, line 850 #62481

Closed
opened 2019-03-12 12:02:06 +01:00 by Paul Szajner · 4 comments

System Information
renderer: 'GeForce GTX 1080 Ti/PCIe/SSE2'
vendor: 'NVIDIA Corporation'
version: '4.5.0 NVIDIA 384.130'
platform: Linux

Blender Version
version: 2.80 (sub 48), branch: blender2.7, commit date: 2019-03-11 23:54, hash: e6eb7b9cce, type: Release
build date: 2019-03-12, 00:12:02

Short description of error
When rendering this particular scene blender crash, this is related to the position of the mesh in front of the camera.
here is the error message :
CUDA error: Illegal address in cuMemcpyHtoD(cuda_device_ptr(mem.device_pointer), mem.host_pointer, mem.memory_size()), line 883
CUDA error: Illegal address in cuLaunchKernel(cuPathTrace, num_blocks, 1, 1, num_threads_per_block, 1, 1, 0, 0, args, 0), line 1733
CUDA error: Illegal address in cuCtxSynchronize(), line 1735
CUDA error: Illegal address in cuMemcpyHtoD(cuda_device_ptr(mem.device_pointer), mem.host_pointer, mem.memory_size()), line 883
CUDA error: Illegal address in cuLaunchKernel(cuPathTrace, num_blocks, 1, 1, num_threads_per_block, 1, 1, 0, 0, args, 0), line 1733
CUDA error: Illegal address in cuCtxSynchronize(), line 1735
CUDA error: Illegal address in cuMemcpyDtoH((uchar*)mem.host_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size), line 965
CUDA error: Illegal address in mem_alloc_result, line 850
CUDA error: Illegal address in cuModuleGetGlobal(&cumem, &cubytes, cuModule, bind_name.c_str()), line 1060
CUDA error: Illegal address in cuMemcpyHtoD(cumem, (void*)&ptr, cubytes), line 1070
CUDA error: Illegal address in mem_alloc_result, line 850

Exact steps for others to reproduce the error
Open the attached .blend , hitting F12 should lead to a crash.
Moving the plane outside the frame and rendering shouldn't crash blender.
E047_P017_V003.crash.txt
E047_P017_V003.blend

**System Information** renderer: 'GeForce GTX 1080 Ti/PCIe/SSE2' vendor: 'NVIDIA Corporation' version: '4.5.0 NVIDIA 384.130' platform: Linux **Blender Version** version: 2.80 (sub 48), branch: blender2.7, commit date: 2019-03-11 23:54, hash: e6eb7b9ccee1, type: Release build date: 2019-03-12, 00:12:02 **Short description of error** When rendering this particular scene blender crash, this is related to the position of the mesh in front of the camera. here is the error message : CUDA error: Illegal address in cuMemcpyHtoD(cuda_device_ptr(mem.device_pointer), mem.host_pointer, mem.memory_size()), line 883 CUDA error: Illegal address in cuLaunchKernel(cuPathTrace, num_blocks, 1, 1, num_threads_per_block, 1, 1, 0, 0, args, 0), line 1733 CUDA error: Illegal address in cuCtxSynchronize(), line 1735 CUDA error: Illegal address in cuMemcpyHtoD(cuda_device_ptr(mem.device_pointer), mem.host_pointer, mem.memory_size()), line 883 CUDA error: Illegal address in cuLaunchKernel(cuPathTrace, num_blocks, 1, 1, num_threads_per_block, 1, 1, 0, 0, args, 0), line 1733 CUDA error: Illegal address in cuCtxSynchronize(), line 1735 CUDA error: Illegal address in cuMemcpyDtoH((uchar*)mem.host_pointer + offset, (CUdeviceptr)(mem.device_pointer + offset), size), line 965 CUDA error: Illegal address in mem_alloc_result, line 850 CUDA error: Illegal address in cuModuleGetGlobal(&cumem, &cubytes, cuModule, bind_name.c_str()), line 1060 CUDA error: Illegal address in cuMemcpyHtoD(cumem, (void*)&ptr, cubytes), line 1070 CUDA error: Illegal address in mem_alloc_result, line 850 **Exact steps for others to reproduce the error** Open the attached .blend , hitting F12 should lead to a crash. Moving the plane outside the frame and rendering shouldn't crash blender. [E047_P017_V003.crash.txt](https://archive.blender.org/developer/F6809575/E047_P017_V003.crash.txt) [E047_P017_V003.blend](https://archive.blender.org/developer/F6809577/E047_P017_V003.blend)
Author

Added subscriber: @sozap

Added subscriber: @sozap

This issue was referenced by blender/cycles@d6580de31d

This issue was referenced by blender/cycles@d6580de31d0ffd3396fa5d77f18980112eddcd63

This issue was referenced by e3b1ae9a81

This issue was referenced by e3b1ae9a8166ebb2e5255b5c1f93c383b87a7024

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62481
No description provided.