Fix T62481: Cycles crash rendering with UV pass after recent changes.